@@ -1055,6 +1055,178 @@ public class PermintaanVendorBoImpl implements PermintaanVendorBo {
         return transaksiStok;
     }
 
+    private List<TransaksiStok> getListTransaksiObat(String idPelayanan, Integer tahun, Integer bulan, String idObat) throws GeneralBOException{
+
+        Map hsCriteria = new HashMap();
+        hsCriteria.put("id_barang", idObat);
+        hsCriteria.put("id_pelayanan", idPelayanan);
+        hsCriteria.put("tahun", tahun);
+        hsCriteria.put("bulan", bulan);
+
+        List<ItSimrsTransaksiStokEntity> stokEntities = new ArrayList<>();
+        try {
+            stokEntities = transaksiStokDao.getByCriteria(hsCriteria);
+        } catch (HibernateException e){
+            logger.error("[ObatPoliBoImpl.getListReporTransaksiObat] ERROR .", e);
+            throw new GeneralBOException("[ObatPoliBoImpl.getListReporTransaksiObat] ERROR .", e);
+        }
+
+        BigDecimal nol = new BigDecimal(0);
+        BigInteger nolB = new BigInteger(String.valueOf(0));
+        List<TransaksiStok> listOfTransaksi = new ArrayList<>();
+        if (stokEntities.size() > 0){
+
+            int n = 0;
+            TransaksiStok trans;
+            String namaObat = "";
+            for (ItSimrsTransaksiStokEntity stok : stokEntities){
+
+                // get nama obat
+                if ("".equalsIgnoreCase(namaObat)){
+                    ImSimrsObatEntity obatEntity = new ImSimrsObatEntity();
+                    try {
+                        obatEntity = obatDao.getById("idBarang", stok.getIdBarang());
+                    } catch (HibernateException e){
+                        logger.error("[ObatPoliBoImpl.getListReporTransaksiObat] ERROR .", e);
+                        throw new GeneralBOException("[ObatPoliBoImpl.getListReporTransaksiObat] ERROR .", e);
+                    }
+
+                    if (obatEntity != null){
+                        namaObat = obatEntity.getNamaObat();
+                    }
+                }
+
+
+                if (listOfTransaksi.size() == 0){
+
+                    // saldo bulan lalu tanpa data pendukung
+                    if (stok.getQtyLalu() != null && stok.getQtyLalu().compareTo(new BigInteger(String.valueOf(0))) == 1){
+
+                        trans = new TransaksiStok();
+                        trans.setNamaObat(namaObat);
+                        trans.setQtyLalu(nolB);
+                        trans.setTotalLalu(nol);
+                        trans.setSubTotalLalu(nol);
+
+                        trans.setQtyLalu(stok.getQtyLalu());
+                        trans.setTotalLalu(stok.getTotalLalu());
+                        trans.setSubTotalLalu(stok.getSubTotalLalu());
+                        listOfTransaksi.add(trans);
+                        n++;
+                    } else {
+                        trans = new TransaksiStok();
+                        trans.setNamaObat(namaObat);
+                        trans.setQtyLalu(nolB);
+                        trans.setTotalLalu(nol);
+                        trans.setSubTotalLalu(nol);
+                        listOfTransaksi.add(trans);
+                        n++;
+                    }
+
+                    // data seletelah saldo bulan lalu dengan data pendukung
+                    trans = new TransaksiStok();
+                    trans.setNamaObat(namaObat);
+                    trans.setRegisteredDate(stok.getRegisteredDate());
+                    trans.setCreatedDate(stok.getCreatedDate());
+                    trans.setKeterangan(stok.getKeterangan());
+                    trans.setTipe(stok.getTipe());
+
+                    TransaksiStok minStok = listOfTransaksi.get(n-1);
+                    if ("D".equalsIgnoreCase(stok.getTipe())){
+                        trans.setQty(stok.getQty());
+                        trans.setTotal(stok.getTotal());
+                        trans.setSubTotal(stok.getSubTotal());
+
+//                        trans.setQtyKredit(nolB);
+//                        trans.setTotalKredit(nol);
+//                        trans.setSubTotalKredit(nol);
+
+                        // qty saldo = qty masuk + qty lalu;
+                        trans.setQtySaldo(minStok.getQtyLalu().add(stok.getQty()));
+
+                        // total saldo = sub total lalu + sub total / qty saldo
+                        trans.setTotalSaldo(minStok.getSubTotalLalu().add(stok.getSubTotal()).divide(new BigDecimal(trans.getQtySaldo()), 2, BigDecimal.ROUND_HALF_UP));
+
+                        // sub total saldo = total saldo * qty saldo
+                        trans.setSubTotalSaldo(trans.getTotal().multiply(new BigDecimal(trans.getQtySaldo())));
+                    } else {
+
+//                        trans.setQty(nolB);
+//                        trans.setTotal(nol);
+//                        trans.setSubTotal(nol);
+
+                        trans.setQtyKredit(stok.getQty());
+                        trans.setTotalKredit(stok.getTotal());
+                        trans.setSubTotalKredit(stok.getSubTotal());
+
+                        // qty saldo = qty bulan lalu - qty masuk
+                        trans.setQtySaldo(minStok.getQtyLalu().subtract(stok.getQty()));
+
+                        // total saldo = total lalu
+                        trans.setTotalSaldo(stok.getTotalLalu());
+
+                        // sub total saldo = total saldo * qty saldo
+                        trans.setSubTotalSaldo(trans.getTotal().multiply(new BigDecimal(trans.getQtySaldo())));
+                    }
+                    listOfTransaksi.add(trans);
+                    n++;
+                } else {
+
+                    // data pendukung
+                    trans = new TransaksiStok();
+                    trans.setNamaObat(namaObat);
+                    trans.setRegisteredDate(stok.getRegisteredDate());
+                    trans.setCreatedDate(stok.getCreatedDate());
+                    trans.setKeterangan(stok.getKeterangan());
+                    trans.setTipe(stok.getTipe());
+
+                    TransaksiStok minStok = listOfTransaksi.get(n-1);
+
+                    if ("D".equalsIgnoreCase(stok.getTipe())){
+                        trans.setQty(stok.getQty());
+                        trans.setTotal(stok.getTotal());
+                        trans.setSubTotal(stok.getSubTotal());
+
+//                        trans.setQtyKredit(nolB);
+//                        trans.setTotalKredit(nol);
+//                        trans.setSubTotalKredit(nol);
+
+                        // qty saldo = qty saldo lalu + qty
+                        trans.setQtySaldo(minStok.getQtySaldo().add(stok.getQty()));
+
+                        // total saldo = sub total saldo lalu + sub total / qty saldo
+                        trans.setTotalSaldo(minStok.getSubTotalSaldo().add(stok.getSubTotal()).divide(new BigDecimal(trans.getQtySaldo()), 2, BigDecimal.ROUND_HALF_UP));
+
+                        // sub total saldo = sub total saldo
+                        trans.setSubTotalSaldo(trans.getTotalSaldo().multiply(new BigDecimal(trans.getQtySaldo())));
+                    } else {
+
+//                        trans.setQty(nolB);
+//                        trans.setTotal(nol);
+//                        trans.setSubTotal(nol);
+
+                        trans.setQtyKredit(stok.getQty());
+                        trans.setTotalKredit(stok.getTotal());
+                        trans.setSubTotalKredit(stok.getSubTotal());
+
+                        // qty saldo = qty saldo - qty
+                        trans.setQtySaldo(minStok.getQtySaldo().subtract(stok.getQty()));
+
+                        // total saldo = total saldo lalu
+                        trans.setTotalSaldo(minStok.getTotalSaldo());
+
+                        // sub total saldo = sub total saldo
+                        trans.setSubTotalSaldo(trans.getTotalSaldo().multiply(new BigDecimal(trans.getQtySaldo())));
+                    }
+                    listOfTransaksi.add(trans);
+                    n++;
+                }
+            }
+        }
+
+        return listOfTransaksi;
+    }
+
     private void saveTransaksiStok(ImSimrsObatEntity obatEntity, String idVendor, String idPelayanan) throws GeneralBOException{
         logger.info("[PermintaanVendorBoImpl.saveToRiwayatBarangMasuk] START >>>");
 
@@ -1064,7 +1236,6 @@ public class PermintaanVendorBoImpl implements PermintaanVendorBo {
             String tahun = CommonUtil.getDateParted(date, "YEAR");
             String bulan = CommonUtil.getDateParted(date, "MONTH");
 
-            TransaksiStok saldoBulanLalu = new TransaksiStok();
             boolean flagTutup = false;
             List<ItSimrsBatasTutupPeriodEntity> batasTutupPeriod = batasTutupPeriodDao.getBatasPeriodeDitutup(obatEntity.getBranchId(), bulan, tahun);
             if (batasTutupPeriod.size() > 0){
@@ -1072,50 +1243,42 @@ public class PermintaanVendorBoImpl implements PermintaanVendorBo {
                 flagTutup = true;
             }
 
+            TransaksiStok saldoBulanLalu = new TransaksiStok();
+            if (flagTutup){
 
-            // cari apakah data baru
-            Map hsCriteria = new HashMap();
-            hsCriteria.put("branch_id", obatEntity.getBranchId());
-            hsCriteria.put("id_barang", obatEntity.getIdObat());
-            hsCriteria.put("bulan", Integer.valueOf(bulan));
-            hsCriteria.put("tahun", Integer.valueOf(tahun));
+                Integer tahunDepan = new Integer(0);
+                Integer bulanDepan = new Integer(0);
 
-            TransaksiStok stokBulanLalu = new TransaksiStok();
-            List<ItSimrsTransaksiStokEntity> transaksiStokEntities = transaksiStokDao.getByCriteria(hsCriteria);
-            if (transaksiStokEntities.size() == 0){
-
-                // jika sudah ditutup bulan ini
-                // maka hitung saldo bulan ini sebagai saldo bulan lalu
-                if (flagTutup){
-                    saldoBulanLalu = getSumSaldoBulanLaluStok(transaksiStokEntities);
+                if ("12".equalsIgnoreCase(bulan)){
+                    bulanDepan = Integer.valueOf(1);
+                    tahunDepan = Integer.valueOf(tahun) + 1;
                 } else {
-                    // jika data baru dibulan tersebut maka mengitung juga saldo bulan sebelumnya jika ada;
-                    // mencari data saldo bulan lalu
-                    // menghitung saldo lalu;
+                    bulanDepan = Integer.valueOf(bulan) + 1;
+                    tahunDepan = Integer.valueOf(tahun);
+                }
 
-                    Integer tahunLalu = new Integer(0);
-                    Integer bulanLalu = new Integer(0);
+                // cari apakah data baru
+                Map hsCriteria = new HashMap();
+                hsCriteria.put("branch_id", obatEntity.getBranchId());
+                hsCriteria.put("id_barang", obatEntity.getIdObat());
+                hsCriteria.put("bulan", bulanDepan);
+                hsCriteria.put("tahun", tahunDepan);
+                hsCriteria.put("id_pelayanan", idPelayanan);
 
-                    if ("1".equalsIgnoreCase(bulan)){
-                        bulanLalu = 12;
-                        tahunLalu = Integer.valueOf(tahun) - 1;
-                    } else {
-                        bulanLalu = Integer.valueOf(bulan) - 1;
-                        tahunLalu = Integer.valueOf(tahun);
+                List<ItSimrsTransaksiStokEntity> transaksiStokEntities = transaksiStokDao.getByCriteria(hsCriteria);
+                if (transaksiStokEntities.size() == 0){
+
+
+                    // jika sudah ditutup bulan ini
+                    // maka hitung saldo bulan ini sebagai saldo bulan lalu
+                    if (flagTutup){
+                        List<TransaksiStok> saldoBulanLaluList = getListTransaksiObat(idPelayanan, Integer.valueOf(tahun), Integer.valueOf(bulan), obatEntity.getIdObat());
+                        if (saldoBulanLaluList.size() > 0){
+                            saldoBulanLalu = saldoBulanLaluList.get(saldoBulanLaluList.size() -1);
+                        }
                     }
-
-                    hsCriteria = new HashMap();
-                    hsCriteria.put("branch_id", obatEntity.getBranchId());
-                    hsCriteria.put("id_barang", obatEntity.getIdObat());
-                    hsCriteria.put("bulan", bulanLalu);
-                    hsCriteria.put("tahun", tahunLalu);
-
-                    transaksiStokEntities = new ArrayList<>();
-                    transaksiStokEntities = transaksiStokDao.getByCriteria(hsCriteria);
-                    stokBulanLalu = getSumSaldoBulanLaluStok(transaksiStokEntities);
                 }
             }
-
 
             ImBranchesPK branchesPK = new ImBranchesPK();
             branchesPK.setId(obatEntity.getBranchId());
@@ -1185,10 +1348,10 @@ public class PermintaanVendorBoImpl implements PermintaanVendorBo {
             transaksiStokEntity.setIdBarang(obatEntity.getIdBarang());
             transaksiStokEntity.setIdPelayanan(idPelayanan);
             // jika ada saldo lalu
-            if (saldoBulanLalu.getQtyLalu().compareTo(new BigInteger(String.valueOf(0))) == 1){
-                transaksiStokEntity.setQtyLalu(stokBulanLalu.getQtySaldo());
+            if (saldoBulanLalu.getQtySaldo() != null && saldoBulanLalu.getQtySaldo().compareTo(new BigInteger(String.valueOf(0))) == 1){
+                transaksiStokEntity.setQtyLalu(saldoBulanLalu.getQtySaldo());
                 transaksiStokEntity.setTotalLalu(saldoBulanLalu.getTotalSaldo());
-                transaksiStokEntity.setSubTotalLalu(saldoBulanLalu.getSubTotal());
+                transaksiStokEntity.setSubTotalLalu(saldoBulanLalu.getSubTotalSaldo());
             } else {
                 transaksiStokEntity.setQtyLalu(new BigInteger(String.valueOf(0)));
                 transaksiStokEntity.setTotalLalu(new BigDecimal(0));
